--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -1,4 +1,4 @@
-name: Build, Scan and Rollout Multiarchitecture Containers
+name: test-actions
 
 env: 
   QUAY_USERNAME: mmondics
@@ -22,49 +22,57 @@ env:
   MANIFEST_IMAGE_TAG: manifest-${{ github.sha }}
   # IMAGE_REGISTRY: quay-registry-quay-openshift-operators.apps.atsocppa.dmz/mmondics
   IMAGE_REGISTRY: quay.io/mmondics
-
-# on:
-#   push:
-#     paths:
-#       - acmeair/source/acmeair-mainservice-java/src/main/webapp/*
-#     branches:
-#       - DevSecOps
+  
 on: workflow_dispatch
 
-jobs:
-  s390x-build-and-push: 
-    name: s390x build and push to Quay
-    runs-on: [self-hosted, linux, s390x, native]
+jobs: 
+  acs-image-scan: 
+    name: Scan container manifest with Red Hat Advanced Cluster Security
+    runs-on: [self-hosted, linux, s390x]
     environment: openshift
-
+    needs: update-app-yaml
+    continue-on-error: true
+    
+    # Image scan is initated on self-hosted IBM Z runner.
+    # Image scan is performed by ACS server running on IBM Z.
     steps:
-    - name: Checkout
-      id: checkout
-      # checkout@v2 should be used until s390x runner version is updated
-      uses: actions/checkout@v1
-      with:
-        ref: DevSecOps
-
-    # build the app package for s390x
-    - name: mvn clean package
+    - name: install roxctl cli        
+      run: | 
+        curl -O https://mirror.openshift.com/pub/rhacs/assets/4.3.0/bin/Linux/roxctl-s390x
+        chmod +x roxctl-s390x
+        ln -s roxctl-s390x roxctl
+      continue-on-error: true
+    - name: deployment-check
       run: |
-        mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
-
-    # build the container image for s390x
-    - name: podman build
+        ./roxctl --insecure-skip-tls-verify deployment check --endpoint ${{ env.ROX_CENTRAL_ADDRESS }} -f ./acmeair/deployments/deploy-acmeair-mainservice-java.yaml 2>&1 | tee deployment_check.txt
+    - name: image-scan
       run: |
-        podman version
-        podman login registry.redhat.io -u ${{ env.REDHAT_USERNAME }} -p ${{ secrets.REDHAT_PASSWORD }}
-        podman build -t ${{ env.IMAGE_REGISTRY }}/${{ env.APP_NAME }}:${{ env.Z_IMAGE_TAGS }} ./acmeair/source/acmeair-mainservice-java
-
-    # push the s390x container image to repo
-    - name: Push to Registry 
-      id: push-to-registry
-      uses: redhat-actions/push-to-registry@v2
+        ./roxctl --insecure-skip-tls-verify image scan --endpoint ${{ env.ROX_CENTRAL_ADDRESS }} --image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }} 2>&1 | tee image_scan.txt
+    - name: image-check
+      run: |
+        ./roxctl --insecure-skip-tls-verify image check --endpoint ${{ env.ROX_CENTRAL_ADDRESS }} --image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }} 2>&1 | tee image_check.txt
+    
+    # Send results of security scans through email.
+    - name: Send email 
+      uses: dawidd6/action-send-mail@v3
       with:
-        image: ${{ env.APP_NAME }}
-        tags: ${{ env.Z_IMAGE_TAGS }}
-        registry: ${{ env.IMAGE_REGISTRY }}
-        username: ${{ env.QUAY_USERNAME }}
-        password: ${{ env.QUAY_PASSWORD }}
-        tls-verify: false
+        server_address: smtp.gmail.com
+        server_port: 465
+        secure: true
+        username: ${{ env.SMTP_USERNAME }}
+        password: ${{ env.SMTP_PASSWORD }}
+        # Subject of mail message
+        subject: Security Scan for image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}
+        to: matt.mondics@ibm.com
+        from: Matt Mondics <matt.mondics@ibm.com>
+        attachments: deployment_check.txt,image_scan.txt,image_check.txt
+        # Body of mail message (might be a filename prefixed with file:// to read from)
+        body: |
+          Red Hat Advanced Cluster Security scans for image:
+          ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}
+          
+          See attachments for deployment check, image check, and image scan.
+          
+          Update the application code to remediate security findings described in the attached files.
+          
+          Per IBM security practices, failed security scans do not prevent commits to development branches, but they will prevent merging to main branches.
