--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
   GH_TOKEN: ${{ github.token }}
 
-  ROX_CENTRAL_ADDRESS: https://central-stackrox.apps.atsocpd1.dmz:443
+  ROX_CENTRAL_ADDRESS: https://central-rhacs-operator.apps.atsocpd2.dmz:443
   ROX_API_TOKEN: ${{ secrets.ROX_API_TOKEN }}
 
   APP_NAME: acmeair-mainservice-java
