--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,8 @@ jobs:
     steps:
     - name: Checkout
       id: checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
+      # uses: actions/checkout@v4
       with:
         ref: DevSecOps
 
@@ -108,7 +109,8 @@ jobs:
 
   create-manifest:
     name: combine amd64 and s390x container images into a single manifest and push to Quay
-    runs-on: [self-hosted, linux, s390x, native]
+    # runs-on: [self-hosted, linux, s390x, native]
+    runs-on: ubuntu-latest
     needs:
       - s390x-build-and-push
       - amd64-build-and-push
