Revert "test removing resource limits"
This reverts commit b006447331443a3f1fe7140e24935e07bf1245cb.

--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -22,6 +22,11 @@ spec:
           - containerPort: 9080
           - containerPort: 9443
         imagePullPolicy: Always
+        resources:
+          limits: 
+            cpu: '3'
+          requests:
+            cpu: '1500m'
         env:
         - name: USERNAME
           value: admin
