--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -22,11 +22,11 @@ spec:
           - containerPort: 9080
           - containerPort: 9443
         imagePullPolicy: Always
-        # resources:
-        #   limits:
-        #     cpu: '8'
-        #   requests:
-        #     cpu: '4'
+        resources:
+          limits:
+            cpu: '8'
+          requests:
+            cpu: '4'
         env:
         - name: USERNAME
           value: admin
