--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -26,8 +26,10 @@ spec:
         resources:
           limits:
             cpu: '3'
+            memory: '500M'
           requests:
             cpu: '1'
+            memory: '350M'
         env:
         - name: USERNAME
           value: admin
