--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -25,8 +25,10 @@ spec:
         resources:
           limits: 
             cpu: '3'
+            memory: '500M'
           requests:
             cpu: '1500m'
+            memory: "350M"
         env:
         - name: USERNAME
           value: admin
