--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -52,6 +52,8 @@ spec:
           value: '*=info'
         - name: LOGGING_FORMAT
           value: 'simple'
+        - name: INSTANA_IGNORE
+          value: 'true'
         readinessProbe:
           httpGet:
             path: /health
