--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -116,7 +116,7 @@ spec:
        - name: acmeair-booking-db-2
          emptyDir: {}
      containers:
-     - image: quay.io/mmondics/acmeair-mongo:manifest-v1
+     - image: docker.io/mongo:4.4.6
        name: acmeair-booking-db
        ports:
        - containerPort: 27017
@@ -153,7 +153,7 @@ status: {}
 #         ports:
 #         - containerPort: 27017
 #           protocol: TCP
-#         image: quay.io/mmondics/acmeair-mongo:manifest-v1
+#         image: docker.io/mongo:4.4.6
 #         volumeMounts:
 #         - name: acmeair-booking-db-1
 #           mountPath: /data/configdb
