--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -114,7 +114,7 @@ spec:
         - name: acmeair-customer-db-2
           emptyDir: {}
       containers:
-      - image: quay.io/mmondics/acmeair-mongo:manifest-v1
+      - image: docker.io/mongo:4.4.6
         name: acmeair-customer-db
         ports:
         - containerPort: 27017
@@ -151,7 +151,7 @@ status: {}
 #         ports:
 #         - containerPort: 27017
 #           protocol: TCP
-#         image: quay.io/mmondics/acmeair-mongo:manifest-v1
+#         image: docker.io/mongo:4.4.6
 #         volumeMounts:
 #         - name: acmeair-customer-db-1
 #           mountPath: /data/configdb
