--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -110,7 +110,7 @@ spec:
         - name: acmeair-flight-db-2
           emptyDir: {}
       containers:
-      - image: quay.io/mmondics/acmeair-mongo:manifest-v1
+      - image: docker.io/mongo:4.4.6
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
@@ -147,7 +147,7 @@ status: {}
 #         ports:
 #         - containerPort: 27017
 #           protocol: TCP
-#         image: quay.io/mmondics/acmeair-mongo:manifest-v1
+#         image: docker.io/mongo:4.4.6
 #         volumeMounts:
 #         - name: acmeair-flight-db-1
 #           mountPath: /data/configdb
