--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -110,7 +110,7 @@ spec:
         - name: acmeair-flight-db-2
           emptyDir: {}
       containers:
-      - image: docker.io/mongo:4.4.6
+      - image: quay.io/mmondics/mongo:4.4.6-manifest
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
@@ -147,7 +147,7 @@ status: {}
 #         ports:
 #         - containerPort: 27017
 #           protocol: TCP
-#         image: docker.io/mongo:4.4.6
+#         image: quay.io/mmondics/mongo:4.4.6-manifest
 #         volumeMounts:
 #         - name: acmeair-flight-db-1
 #           mountPath: /data/configdb
