switch to quay.io

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ env:
   Z_IMAGE_TAGS: s390x-${{ github.sha }}
   X_IMAGE_TAGS: amd64-${{ github.sha }}
   MANIFEST_IMAGE_TAG: manifest-${{ github.sha }}
-  IMAGE_REGISTRY: quay-registry-quay-openshift-operators.apps.atsocppa.dmz/mmondics # used for on-prem quay
-  # IMAGE_REGISTRY: quay.io/mmondics # used for quay.io
+  # IMAGE_REGISTRY: quay-registry-quay-openshift-operators.apps.atsocppa.dmz/mmondics # used for on-prem quay
+  IMAGE_REGISTRY: quay.io/mmondics # used for quay.io
 
 on:
   push:
@@ -50,8 +50,8 @@ jobs:
     steps:
     - name: Checkout
       id: checkout
-      uses: actions/checkout@v2
-      # uses: actions/checkout@v4
+      # uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         ref: DevSecOps
 
