add topology connector lines

--- a/acmeair-ocpvirt/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair-ocpvirt/deployments/deploy-acmeair-customerservice-java.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: acmeair-customerservice
+  annotations:
+    app.openshift.io/connects-to: '[{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"rhel9-mongodb"}]'
 spec:
   replicas: 1
   selector:
