--- a/acmeair-ocpvirt/deployments/deploy-acmeair-mainservice-java.yaml
+++ b/acmeair-ocpvirt/deployments/deploy-acmeair-mainservice-java.yaml
@@ -3,6 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: acmeair-mainservice
+  annotations:
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"acmeair-authservice"},{"apiVersion":"apps/v1","kind":"Deployment","name":"acmeair-customerservice"},{"apiVersion":"apps/v1","kind":"Deployment","name":"acmeair-flightservice"},{"apiVersion":"apps/v1","kind":"Deployment","name":"acmeair-bookingservice"}]'
+
 spec:
   replicas: 1
   selector:
